tests/baselines/reference/mergedModuleDeclarationCodeGen4.errors.txt
mergedModuleDeclarationCodeGen4.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(2,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(3,16): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(3,26): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(4,20): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(8,16): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(8,26): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergedModuleDeclarationCodeGen4.ts(9,20): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== mergedModuleDeclarationCodeGen4.ts (8 errors) ====
    module superContain {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module contain {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export module my.buz {
                   ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                             ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                export module data {
                       ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                    export function foo() { }
                }
            }
            export module my.buz {
                   ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                             ~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                export module data {
                       ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
                    export function bar(contain, my, buz, data) {
                        foo();
                    }
                }
            }
        }
    }